Fixing padding issue
Modified .content width to allow padding without overflowing.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -40,7 +40,7 @@ main
 
 .test
 {
-	margin-top: 0;
+		margin-top: 0;
 }
 
 .pagetitle
@@ -65,8 +65,8 @@ main
 		color: lightgray;
 		height: 70%;
 		font-size: 20px;
-    width: 100%;
-		padding: 10px;
+    width: 96%;
+		padding: 2%;
 }
 
 .bottom
@@ -75,6 +75,7 @@ main
 		color: white;
     height: 4%;
     width: 100%;
+    margin-top: 0;
 }
 
 footer
